@@ -12,7 +12,7 @@
             "rct2.scenery_small.tlc",
             "fidwell.scenery_small.tlc",
             "rct2.scenery_small.tmc",
-            "$DAT:00000002|GWTRMC  ",
+            "fidwell.scenery_small.tmc",
             "rct2.scenery_small.tmp",
             "$DAT:00000002|GWTRMP  ",
             "rct2.scenery_small.titc",
