@@ -1,0 +1,46 @@
+{
+    "id": "fidwell.scenery_small.tmc",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "00000002|GWTRMC  |12CC603C",
+    "sourceGame": ["custom"],
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 25,
+        "removalPrice": 15,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 108,
+        "isTree": true,
+        "shape": "4/4",
+        "hasPrimaryColour": true,
+        "hasSecondaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -31, "y": -108 },
+      { "path": "images/1.png", "x": -30, "y": -103 },
+      { "path": "images/2.png", "x": -30, "y": -105 },
+      { "path": "images/3.png", "x": -31, "y": -104 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Monterey Cypress Tree",
+            "fr-FR": "Cyprès de Monterrey",
+            "de-DE": "Monterey-Zypresse",
+            "es-ES": "Ciprés de Monterrey",
+            "it-IT": "Cipresso di Monterey",
+            "nl-NL": "Montereycipres",
+            "sv-SE": "Monterey-cypress",
+            "ko-KR": "왕느릅나무",
+            "zh-CN": "蒙特瑞柏树",
+            "zh-TW": "蒙特瑞柏樹",
+            "pt-BR": "Árvore Cipreste-de-Monterey",
+            "cs-CZ": "Montereyův cypřiš",
+            "ja-JP": "モンテレー糸杉",
+            "pl-PL": "Cyprys amerykański",
+            "ru-RU": "Горный кипарис",
+            "eo-ZZ": "Cipresarbo de Monterey",
+            "ca-ES": "Xiprer de Monterey",
+            "fi-FI": "Montereynsypressi"
+        }
+    }
+}
